--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
 			"name": "windows-debug-x64",
 			"type": "cppvsdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}\\bin\\${relativeFileDirname}${pathSeparator}${fileBasenameNoExtension}.exe",
+			"program": "${workspaceFolder}\\bin\\${relativeFileDirname}.exe",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}\\bin\\${relativeFileDirname}",
+			"cwd": "${workspaceFolder}\\bin",
 			"console": "integratedTerminal",
 			"preLaunchTask": "build-debug-x64"
 		},
@@ -17,10 +17,10 @@
 			"name": "posix-debug-x64",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/bin/${relativeFileDirname}${pathSeparator}${fileBasenameNoExtension}",
+			"program": "${workspaceFolder}/bin/${relativeFileDirname}",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/bin/${relativeFileDirname}",
+			"cwd": "${workspaceFolder}/bin",
 			"console": "integratedTerminal",
 			"preLaunchTask": "build-debug-x64",
 
