--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,28 +3,35 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "windows-debug-x64",
-			"type": "cppvsdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}\\bin\\${relativeFileDirname}.exe",
-			"args": [],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}\\bin",
-			"console": "integratedTerminal",
-			"preLaunchTask": "build-debug-x64"
-		},
-		{
-			"name": "posix-debug-x64",
+			"name": "debug-x64",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/bin/${relativeFileDirname}",
+			"program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/bin",
 			"console": "integratedTerminal",
 			"preLaunchTask": "build-debug-x64",
-
 			"MIMode": "gdb",
+
+			"windows": { "type": "cppvsdbg" },
+
+			"osx": { "MIMode": "lldb" }
+		},
+		{
+			"name": "release-x64",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}/bin",
+			"console": "integratedTerminal",
+			"preLaunchTask": "build-release-x64",
+			"MIMode": "gdb",
+
+			"windows": { "type": "cppvsdbg" },
+
 			"osx": { "MIMode": "lldb" }
 		}
 	]
